[gd_scene load_steps=5 format=2]

[ext_resource path="res://WinGame/WinGame.gd" type="Script" id=1]
[ext_resource path="res://WinGame/PARABÉNS.png" type="Texture" id=2]
[ext_resource path="res://WinGame/434612__jens-enk__completed.ogg" type="AudioStream" id=3]
[ext_resource path="res://WinGame/AudioStreamPlayer.gd" type="Script" id=4]

[node name="WinGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 967.5, 537.5 )
scale = Vector2( 2.38889, 2.38889 )
texture = ExtResource( 2 )

[node name="TextEdit" type="TextEdit" parent="Sprite" groups=[
"a",
]]
margin_left = -405.0
margin_top = 37.0
margin_right = -133.0
margin_bottom = 225.0
text = "Insira sugestões"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
script = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = 240.0
margin_top = 960.0
margin_right = 298.0
margin_bottom = 980.0
rect_scale = Vector2( 3, 3 )
text = "Submit"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.43
autostart = true
[connection signal="cursor_changed" from="Sprite/TextEdit" to="." method="_on_TextEdit_cursor_changed"]
[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
